vistas de docente, estudiantes y puertas

--- a/views/frm_curso.xml
+++ b/views/frm_curso.xml
@@ -56,7 +56,7 @@ $('#myModal').on('shown.bs.modal', function () {
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="/puertas">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Abrir puertas</span></a>
             </li>
@@ -80,14 +80,14 @@ $('#myModal').on('shown.bs.modal', function () {
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="/docentes">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Docente</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="/accesscontrol">
+                <a class="nav-link" href="/estudiantes">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Estudiantes</span></a>
             </li>
@@ -287,7 +287,7 @@ $('#myModal').on('shown.bs.modal', function () {
                     <select required="True" t-att-value="id_curso" id="carrera" name="carrera" > 
                         <option value="">Eliga una opcion</option>
                         <div t-foreach="c" t-as="data">
-                         <option t-att-value="id_curso"><t t-esc="data.id"></t></option>
+                         <option t-att-value="id_curso"><t t-esc="data.nombre_carrera"></t></option>
                          </div>
                     </select>
                             </div>
