--- a/views/frm_estudiante.xml
+++ b/views/frm_estudiante.xml
@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <odoo>
-    <template id='websitmateria' name='principal'>
+    <template id='websiteestudiante' name='principal'>
      <html lang="en">
 
 <head>
@@ -98,7 +98,7 @@ $('#myModal').on('shown.bs.modal', function () {
                     <span>Horario</span></a>
             </li>
              <li class="nav-item">
-                <a class="nav-link" href="/">
+                <a class="nav-link" href="/informes">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Informes</span></a>
             </li>
@@ -136,7 +136,7 @@ $('#myModal').on('shown.bs.modal', function () {
                     </button>
 
                     <!-- Topbar Search -->
-                  
+                   
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -224,7 +224,7 @@ $('#myModal').on('shown.bs.modal', function () {
 
 <div class="container">
    
-    <h1>Materias</h1>
+    <h1>Estudiantes</h1>
     <div class="form-group" >
         
        
@@ -232,26 +232,25 @@ $('#myModal').on('shown.bs.modal', function () {
     </div>
     <div >
             <a data-toggle="modal" data-target="#exampleModal" class="btn btn-success" style="float: right;">
-                <span class="glyphicon glyphicon-plus" ></span>Agregar Materia
+                <span class="glyphicon glyphicon-plus" ></span>Agregar carrera
               </a>
         </div>
     <table class="table table-striped" id="tpelicula">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Materia</th>
                 <th>Carrera</th>
                 <th>Accion </th>
             </tr>
             </thead>
              
-                <tr t-foreach="materia" t-as="m">
+                <tr t-foreach="c" t-as="data">
 
-                    <th><t t-esc="m.id"/></th>
-                    <th><t t-esc="m.nombre_materia"/></th>
-                   <th><t t-esc="m.carrera_id.nombre_carrera"/></th>
-                    <th><a t-att-href="('/editarmateria?id=%s' % m.id)" ><i class="fa fa-pencil-alt"></i></a>
-                       <a t-att-href="('/eliminarmateria?id=%s' % m.id)" class="btn btn-danger"><i class="fa fa-times"></i></a></th>
+                    <th><t t-esc="data.id"/></th>
+                    <th><t t-esc="data.nombre_carrera"/></th>
+                   <th><a t-att-href="('/editarcarrera?id=%s' % data.id)"><i class="fa fa-pencil-alt"></i></a>
+                       <a t-att-href="('/eliminarcarrera?id=%s' % data.id)" class="btn btn-danger"><i class="fa fa-times"></i></a></th>
+
                            
    
                     
@@ -268,34 +267,25 @@ $('#myModal').on('shown.bs.modal', function () {
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Agregar Materia</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Agregar carrera</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true"></span>
         </button>
       </div>
       <div class="modal-body">
-        <form method="POST" action="/guardar_materia">
+        <form method="POST" action="/guardar_carrera">
  
-                <div class="form-group row">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Nombre de la materia</label>
-                    <div class="col-sm-10">
-                    <input type="text" required="True" pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}" class="form-control" id="nombre_materia" name="nombre_materia" t-att-value="nombre_materia" placeholder="Ingrese nombre de la materia"/>
-                    </div>
-                </div>
-                  <div>
-                    <label for="">Carrera a la que pertenece</label>
-                    <select required="True"  id="carrera" name="carrera" > 
-                        <option value="">Eliga una opcion</option>
-                        <div t-foreach="c" t-as="data">
-                         <option t-att-value="id_curso"><t t-esc="data.nombre_carrera"></t></option>
-                         </div>
-                    </select>
-                            </div>
-            <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
-                    <button type="submit" class="btn btn-success">Guardar</button>
-                </div>
-            </form>
+  <div class="form-group row">
+    <label for="inputPassword" class="col-sm-2 col-form-label">Nombre de la carrera</label>
+    <div class="col-sm-10">
+      <input type="text"  pattern="[a-zA-ZàáâäãåąčćęèéêëėįìíîïłńòóôöõøùúûüųūÿýżźñçčšžÀÁÂÄÃÅĄĆČĖĘÈÉÊËÌÍÎÏĮŁŃÒÓÔÖÕØÙÚÛÜŲŪŸÝŻŹÑßÇŒÆČŠŽ∂ð ,.'-]{2,48}" required="True" title="Solo se aceptan letras" class="form-control" id="nombre_carrera" name="nombre_carrera" t-att-value="nombre_carrera" placeholder="Ingrese nombre de la carrera"/>
+    </div>
+  </div>
+  <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+        <button type="submit" class="btn btn-success">Guardar</button>
+      </div>
+</form>
       </div>
       
     </div>
