--- a/views/principal.xml
+++ b/views/principal.xml
@@ -52,7 +52,7 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="/puertas">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Abrir puertas</span></a>
             </li>
@@ -76,14 +76,14 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="/docentes">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Docente</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="/accesscontrol">
+                <a class="nav-link" href="/estudiantes">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Estudiantes</span></a>
             </li>
@@ -99,7 +99,7 @@
                     <span>Informes</span></a>
             </li>
              <li class="nav-item">
-                <a class="nav-link" href="tables.html">
+                <a class="nav-link" href="/lab">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Laboratorio</span></a>
             </li>
