--- a/views/frm_lab.xml
+++ b/views/frm_lab.xml
@@ -227,7 +227,11 @@ $('#myModal').on('shown.bs.modal', function () {
     <h1>Laboratorios</h1>
     <div class="form-group" >
         
-       
+       <div role="alert" class="alert alert-danger" 
+       style="height:40px width:30px, margin-botton:1px;"
+       attrs="{'invisible': [('warning', '=',  False)]}">
+           Error 
+        </div>
       
     </div>
     <div >
